<resources>
    <string name="app_name">Ramalan Zodiak</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="deskripsi">Yuk, cari tau tentang zodiakmu, teman kamu, keluarga kamu, gebetanmu, atau orang lain.</string>

    <string name="tentang_zodiak">Zodiak adalah istilah astrologi atau ilmu perbintangan yang berkaitan dengan siklus 12 wilayah sepanjang lingkaran eliptik yang berlangsung selama setahun. Diduga rasi bintang atau zodiak sudah ada sejak 3000 tahun sebelum masehi. Bangsa kuno melihat bahwa matahari bergerak teratur diantara bintang-bintang, dan untuk memudahkan pengamatan, mereka membagi lingkaran peredaraan matahari menjadi 12 bagian yang terdiri atas bintang-bintang, dan diberi nama sesuai dengan bentuk kelompok bintang yang terlihat dilangit. Mereka percaya bahwa bintang adalah tempat persinggahan dewa-dewi yang mereka hormati, dan keberadaannya memberi pengaruh pada sifat, karakter dan keberuntungan seseorang yang dilahirkan pada waktu siklus zodiak tersebut, dan dipercaya juga dapat memberi gambaran tentang ramalan jalan hidup dan nasib seseorang. Astrologi tidak diajarkan secara khusus dilembaga pendidikan resmi, karena merupakan Pseudoscience. Setiap bangsa memiliki astrologi dan istilahnya sendiri, namun karena astrologi yang kita kenal secara umum berasal dari barat, maka kita mengenal zodiak yang sebagian besar menggunakan bahasa latin. Dibawah ini adalah watak dan karakter orang yang kelahirannya mendapat pengaruh dari zodiak tersebut.</string>
    <string name="desaigned">designed &amp; developed by madrish\nthanks to:\nibacor.com</string>
    <string name="ttg">\t\t\t\t\tZodiak (dari kata Yunani Zoodiacos Cyclosyang artinya Lingkaran Hewan) adalah sebuah sabuk khayal di langit dengan lebar 18° yang berpusat pada lingkaran ekliptika, tetapi istilah ini dapat pula merujuk pada rasi-rasi bintang yang dilewati oleh sabuk tersebut, yang sekarang berjumlah 13. </string>
    <string name="ttg2">\t\t\t\t\tDipercaya awal mula konsep ini berasal dari peradaban Lembah Sungai Eufrat kemungkinan hanya dengan 6 rasi: Capricornus, Pisces, Taurus, Cancer, Virgo, dan Scorpio, yang kemudian dipecah menjadi 12 karena penampakan tahunan 12 kali bulan purnama pada bagian-bagian berurutan dari sabuk tersebut.</string>
    <string name="ttg3">\t\t\t\t\tZodiak dan Astrologi - Astrologi adalah ilmu yang menghubungkan antara gerakan benda-benda tata surya (planet, bulan, dan matahari) dengan nasib manusia. Karena semua planet, matahari, dan bulan beredar di sepanjang lingkaran ekliptika, otomatis mereka semua juga beredar di antara zodiak. </string>
    <string name="ttg4">\t\t\t\t\tRamalan astrologi didasarkan pada kedudukan benda-benda tata surya di dalam zodiak. Seseorang akan menyandang tanda zodiaknya berdasarkan kedudukan matahari di dalam zodiak pada tanggal kelahirannya. Misalnya, orang yang lahir awal Desemberakan berzodiak Sagitarius, karena pada tanggal tersebut Matahari berada di wilayah rasi bintang Sagitarius. </string>
    <string name="ttg5">\t\t\t\t\tKedudukan Matahari sendiri dibedakan antara waktu tropikal dan waktu sideral yang menyebabkan terdapat 2 macam zodiak, yaitu zodiak tropikal danzodiak sideral. Sebagian besar astrolog Barat dan astrolog Indonesia menggunakan zodiak tropikal, dan sejak kini seluruh dunia menggunakan zodiak tropical.</string>
    <string name="ramalan_harian">Ramalan Harian</string>
    <string name="sejarah_zodiak">Sejarah Zodiak</string>
    <string name="about">About</string>
    <string name="sttSing">"Single - "</string>
</resources>
