<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            card_view:elevation="2dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp">

                <TextView
                    android:text="@string/ttg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp" />

                <TextView
                    android:text="@string/ttg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16"
                    android:layout_marginTop="2dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp" />

                <TextView
                    android:text="@string/ttg3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:text="@string/ttg4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:text="@string/ttg5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView18"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp"
                    android:layout_marginTop="2dp"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
</LinearLayout>